<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.darken.adsbfi.common.preferences.IntentPreference
        android:icon="@drawable/ic_card_text_24"
        android:title="@string/documentation_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/d4rken/adsbfi-companion/wiki" />
    </eu.darken.adsbfi.common.preferences.IntentPreference>

    <eu.darken.adsbfi.common.preferences.IntentPreference
        android:icon="@drawable/ic_github_24"
        android:summary="@string/issue_tracker_description"
        android:title="@string/issue_tracker_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/d4rken/adsbfi-companion/issues" />
    </eu.darken.adsbfi.common.preferences.IntentPreference>

    <eu.darken.adsbfi.common.preferences.IntentPreference
        android:icon="@drawable/ic_discord_24"
        android:summary="The official adsb.fi Discord"
        android:title="adsb.fi Discord">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://discord.gg/adsb" />
    </eu.darken.adsbfi.common.preferences.IntentPreference>

    <eu.darken.adsbfi.common.preferences.IntentPreference
        android:icon="@drawable/ic_discord_24"
        android:summary="The app developers own Discord community"
        android:title="darken\'s Discord">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://discord.gg/ENtVkMHqZg" />
    </eu.darken.adsbfi.common.preferences.IntentPreference>

    <PreferenceCategory app:title="@string/settings_category_other_label">
        <Preference
            android:icon="@drawable/ic_bug_report_24"
            android:key="support.debuglog"
            android:summary="@string/support_debuglog_desc"
            android:title="@string/support_debuglog_label" />
    </PreferenceCategory>
</PreferenceScreen>