<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.darken.adsbfi.main.ui.MainActivity">

    <item
        android:id="@+id/action_add_alert"
        android:icon="@drawable/ic_alert_plus_24"
        android:orderInCategory="100"
        android:title="@string/alerts_list_add_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sponsor_development"
        android:orderInCategory="100"
        android:icon="@drawable/ic_heart_24"
        android:title="@string/general_sponsor_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/label_settings"
        app:showAsAction="never" />
</menu>
